--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Disservin",
   "license": "GPL-3.0",
   "dependencies": {
+    "axios": "^1.2.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3"
   },
