--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "load": "node deploy-commands.js",
-    "start": "node index.js"
+    "start": "npm run load && node index.js"
   },
   "author": "Disservin",
   "license": "GPL-3.0",
