--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^1.8.3",
+    "better-sqlite3": "^12.2.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.0.3",
     "marked": "^5.0.0"
