--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^12.2.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.0.3",
-    "marked": "^5.0.0"
+    "marked": "^5.0.0",
+    "node-cron": "^4.2.1"
   }
 }
